fixed spacing, added google analytics

--- a/style.css
+++ b/style.css
@@ -269,132 +269,10 @@ code {
 	box-shadow: 0 0 2px 2px rgba(170, 0, 255, 0.8);
 }
 
-.roundbox {
-	width: 90%;
-	margin: auto;
-	background-color: #404065;
-	border-radius: 10px;
-	padding: 10px 10px;
-	box-shadow: 0 0 4px 4px rgba(32, 32, 50, 0.8);
-}
-
-.roundbox h2 {
-	margin-bottom: 10px;
-	border-bottom: 1px groove #ACACAC;
-}
-
-.roundbox table.yellowkeys {
-	width: 100%;
-}
-
-.roundbox table.yellowkeys tr td:last-child {
-	color: #f8ef64;
-	margin-top: 0%;
-}
-
-/*
-table.colortable {
-	border-collapse: collapse;
-	padding: 20px 0 20px 0;
-	margin: 0 10px 0 0;
-}
-
-table.colortable td {
-	border: 1px solid #000;
-	text-align: center;
-	padding: 2px;
-	width: 50%;
-}
-
-table.colortable thead tr td {
-	color: #656565;
-	background: #f8ef64;
-	border-color: white;
-	width: 50%;
-}
-*/
-
-.roundbox table.yellowkeys tr td {
-	padding: 2px 0 0 0;
-	word-wrap: normal;
-	width: 50%;
-}
-
-.right {
-	float: right;
-}
-
-.mounthead h2 {
-	float: left;
-	margin-bottom: 2px;
-	border-bottom: none;
-}
-
-.mountcont {
-	border-top: 1px groove #ACACAC;
-	clear: both;
-}
-
-ul.mountlist {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	text-align: right;
-}
-
-.mountlist li {
-	display: inline;
-}
-
-a.play {
-	padding-left: 20px;
-	margin-left: 20px;
-	border: none;
-	background: transparent url("/play.png") no-repeat scroll left center;
-	background-size: auto 100%;
-	
-}
-
-a.auth {
-	padding-left: 20px;
-	margin-left: 20px;
-	border: none;
-	background: transparent url("/lock.png") no-repeat scroll left top;
-	background-size: auto 100%;
-}
-
-/* Admin navigation */
-
-ul.nav {
-	margin: 0;
-	padding: 5px 0 10px 0;
-	clear: both;
-	list-style: none;
-	text-align: center;
-}
-
-ul.nav li {
-	display: inline;
-}
-
-ul.nav li a {
-	border: none;
-	display: inline-block;
-	padding: .2em .7em;
-	margin-top: .2em;
-	background-color: #333;
-	white-space: nowrap;
-	border-radius: 50px
-}
-
-ul.nav li a:hover {
-	color: #fff;
-}
-
 /* Footer */
 
 #footer {
-	/* border-top: 1px groove #ACACAC; */
+	border-top: 1px groove #ACACAC;
 	margin-top: 20px;
 	padding: 10px;
 	font-size: 80%;
